# lure-godot

./: Cargo.toml
res/: Enemy.gdns  Player.gdns  Script.gdns  Shooter.gdns
src/: enemy.rs  lib.rs  player.rs  script.rs  shooter.rs
